<resources>
    <string name="app_name">SOPT_Assignment1</string>
    <string name="SOPTHub">SOPTHub</string>
    <string name="login">로그인</string>
    <string name="id">아이디</string>
    <string name="input_id">아이디를 입력해주세요</string>
    <string name="password">비밀번호</string>
    <string name="input_password">비밀번호를 입력해주세요</string>
    <string name="register">회원가입</string>
    <string name="name">이름</string>
    <string name="inpur_name">이름을 입력해주세요</string>
    <string name="complete_register">회원가입 완료</string>
</resources>